# multi_modal_document_classificatio

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: project_setup.sh
src/: __init__.py
src/config/: constants.py  env_loader.py
src/data_processor/: multi_modal_dataloader.py  multi_modal_dataset.py
src/engine/: multi_modal_classifier_trainer.py
src/model_builder/: classification_head.py  language_classifier.py  language_feature_extractor.py  multi_modal_classifier.py  projection_head.py  vision_backbone.py  vision_classifier.py  vision_feature_extractor.py
src/utils/: custom_mlflow_logger.py
tests/data_processor/: test_multi_modal_dataloader.py  test_multi_modal_dataset.py
tests/model_builder/: test_classification_head.py  test_language_classifier.py  test_language_feature_extractor.py  test_multi_modal_classifier.py  test_projection_head.py  test_vision_backbone.py  test_vision_classifier.py  test_vision_feature_extractor.py
